--- a/conf.toml
+++ b/conf.toml
@@ -14,6 +14,7 @@ git_url = "https://gitee.com/g0ngjie/test-auto-contribution-bot.git"
 # git仓库登录用户名
 git_user = "<username>"
 # git仓库登录密码
+# 需要注意的是,如果你的仓库托管在github上,git_pass则为 Personal access tokens (访问令牌)
 git_pass = "<password>"
 # git邮箱，如果登录用户名为邮箱登录，则一致
 # 邮箱如果不填写，贡献度将无法更新
